# livesplit-discord-server

./: Cargo.toml  Procfile  RustConfig
bingo-templates/: botw-plateau.json  botw-shrine.json  botw.json
src/: discord.rs  main.rs  rest_api.rs
static/botw-bingo/: index.html
static/botw-bingo/css/: bingo.css  style.css
static/botw-bingo/js/: bingo.js
static/botw-bingo/tables/: botw.js
